--- a/client/src/components/signin/Signin.css
+++ b/client/src/components/signin/Signin.css
@@ -1,3 +1,5 @@
+/* This css file would work for sign in, sign up and forgot password page. */
+
 .main-card {
   background-color: rgba(236, 239, 241, 1);
   min-height: 93vh;
@@ -9,13 +11,13 @@
 
 .card {
   width: 400px;
-  height: 450px;
   padding: 30px;
   background-color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  gap: 1rem;
 }
 
 .card-logo-svg {
