--- a/client/src/components/signin/Signin.css
+++ b/client/src/components/signin/Signin.css
@@ -20,6 +20,13 @@
   gap: 1rem;
 }
 
+.signin-form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
 .card-logo-svg {
   width: 40px;
 }
@@ -29,27 +36,10 @@ input {
   height: 2.5rem;
   border: 1px solid #cfd8dc;
   border-radius: 3px;
-}
-
-input::-webkit-input-placeholder {
-  /* Chrome/Opera/Safari */
   padding-left: 10px;
 }
 
-input::-moz-placeholder {
-  /* Firefox 19+ */
-  padding-left: 10px;
-}
 
-input:-ms-input-placeholder {
-  /* IE 10+ */
-  padding-left: 10px;
-}
-
-input:-moz-placeholder {
-  /* Firefox 18- */
-  padding-left: 10px;
-}
 
 .button {
   width: 100%;
