--- a/client/src/components/signin/Signin.css
+++ b/client/src/components/signin/Signin.css
@@ -39,14 +39,13 @@ input {
   padding-left: 10px;
 }
 
-
-
 .button {
   width: 100%;
   height: 2.5rem;
   border: none;
   background: linear-gradient(215deg, #546e7a, #37474f);
   color: white;
+  cursor: pointer;
 }
 
 .forgot-password-signup {
@@ -64,21 +63,21 @@ input {
 }
 
 .open-auth {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: .75rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.75rem;
 }
 
 .icons {
-    display: flex;
-    flex-direction: row;
-    gap: 1rem;
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
 }
 
 .icon {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 
 .icons {
